test/spec_vectors/simd_i32x4_extmul_i16x8/fail/module_10.wat
(module (func $i32x4.extmul_low_i16x8_u-arg-empty (result v128) (i32x4.extmul_low_i16x8_u)))